config: cors base origin 수정
SecurityConfig의 AllowedOrigin을 수정했습니다.