@@ -1,9 +1,9 @@
 package com.cleanengine.coin.user.login.infra;
 
+import com.cleanengine.coin.user.login.application.CustomOAuth2UserService;
 import com.cleanengine.coin.user.login.application.CustomSuccessHandler;
 import com.cleanengine.coin.user.login.application.JWTFilter;
 import com.cleanengine.coin.user.login.application.JWTUtil;
-import com.cleanengine.coin.user.login.application.CustomOAuth2UserService;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,6 +17,7 @@ import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationF
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 
@@ -40,11 +41,14 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        URI uri = new URI(frontendUrl);
+        String frontendBaseUrl = uri.getScheme() + "://" + uri.getHost() + (uri.getPort() == -1 ? "" : ":" + uri.getPort());
+
         http
                 .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
                     CorsConfiguration configuration = new CorsConfiguration();
 
-                    configuration.setAllowedOrigins(List.of(frontendUrl, "http://localhost:63342"));
+                    configuration.setAllowedOrigins(Collections.singletonList(frontendBaseUrl));
                     configuration.setAllowedMethods(Collections.singletonList("*"));
                     configuration.setAllowCredentials(true);
                     configuration.setAllowedHeaders(Collections.singletonList("*"));
